adding mock tests to service.go
